<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    android:id="@+id/activity_registro">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/txtNombre" >
        </TextView>

        <EditText
            android:id="@+id/Nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:inputType="textCapWords"
            android:maxLines="1" >
        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/txtPaterno" >
        </TextView>

        <EditText
            android:id="@+id/Paterno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:inputType="textCapWords"
            android:maxLines="1" >
        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/txtMaterno" >
        </TextView>

        <EditText
            android:id="@+id/Materno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:inputType="textCapWords"
            android:maxLines="1" >
        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/txtDireccion" >
        </TextView>

        <EditText
            android:id="@+id/Direccion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:inputType="textPostalAddress"
            android:maxLines="1" >
        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/txtEdad" >
        </TextView>

        <EditText
            android:id="@+id/Edad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:inputType="number"
            android:maxLines="1"
            >
        </EditText>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txtPeso" >
            </TextView>
            <EditText
                android:id="@+id/Peso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="numberDecimal"
                >
            </EditText>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txtAltura" >
            </TextView>
            <EditText
                android:id="@+id/Altura"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="numberDecimal"
                >
            </EditText>
        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:focusableInTouchMode="true"
            android:id="@+id/txtViewGenero"
            android:text="@string/txtGenero" >
        </TextView>

        <RadioGroup
            android:id="@+id/radioGenero"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"

            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/radioGenderF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/GeneroF" />

            <RadioButton
                android:id="@+id/radioGenderM"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/GeneroM" >
            </RadioButton>
        </RadioGroup>

        <TextView
            android:id="@+id/textViewMedicamento"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:focusableInTouchMode="true"
            android:text="@string/txtMedicamento" >
        </TextView>
        <Spinner
            android:id="@+id/spinnerMedicamento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:entries="@array/medicamentos" >
        </Spinner>

        <TextView
            android:id="@+id/textusuario"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/txtUsuario" >
        </TextView>
        <EditText
            android:id="@+id/UsuarioR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:inputType="text"
            android:maxLines="1" >
        </EditText>

        <TextView
            android:id="@+id/textpass"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/txtPass" >
        </TextView>
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/PasswordR"
            android:inputType="textPassword"
            android:layout_margin="5dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">



            <Button
                android:id="@+id/btnCancelar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:text="@string/btnCancelar" />


            <Button
                android:id="@+id/btnAceptar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:text="@string/btnAceptar" />
        </LinearLayout>



    </LinearLayout>
</ScrollView>