<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <TextView
            android:id="@+id/textViewlvlGlucosa"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/lvlGlucosa" >
        </TextView>
        <EditText
            android:id="@+id/glucosa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:inputType="number"
            >
        </EditText>
        <TextView
            android:id="@+id/tvfecha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:focusableInTouchMode="true"
            android:maxLines="1"
            android:text="@string/fecha"
            >
        </TextView>
        <Button
            android:id="@+id/fechaBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/sFecha"/>

        <TextView
            android:id="@+id/fecha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:maxLines="1"
            >
        </TextView>
        <TextView
            android:id="@+id/tvhora"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:focusableInTouchMode="true"
            android:maxLines="1"
            android:text="@string/hora"
            >
        </TextView>
        <Button
            android:id="@+id/horaBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/sHora"/>

        <TextView
            android:id="@+id/hora"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:maxLines="1"
            >
        </TextView>

        <TextView
            android:id="@+id/textViewAlimentos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:focusableInTouchMode="true"
            android:text="@string/antesDespues" >
        </TextView>
        <Spinner
            android:id="@+id/spinnerAlimentos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:entries="@array/alimentos" >
        </Spinner>
        <Button
            android:id="@+id/enviarBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@color/colorPrimaryDark"
            android:textColor="@android:color/white"
            android:text="@string/enviar"/>

    </LinearLayout>
</ScrollView>