<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    android:id="@+id/activity_registro">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/txtNombre" >
        </TextView>

        <EditText
            android:id="@+id/NombreE"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:inputType="textCapWords"
            android:maxLines="1" >
        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/txtPaterno" >
        </TextView>

        <EditText
            android:id="@+id/PaternoE"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:inputType="textCapWords"
            android:maxLines="1" >
        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/txtMaterno" >
        </TextView>

        <EditText
            android:id="@+id/MaternoE"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:inputType="textCapWords"
            android:maxLines="1" >
        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/txtDireccion" >
        </TextView>

        <EditText
            android:id="@+id/DireccionE"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:inputType="textPostalAddress"
            android:maxLines="1" >
        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/txtEdad" >
        </TextView>

        <EditText
            android:id="@+id/EdadE"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:inputType="number"
            android:maxLines="1"
            >
        </EditText>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txtPeso" >
            </TextView>
            <EditText
                android:id="@+id/PesoE"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="numberDecimal"
                >
            </EditText>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txtAltura" >
            </TextView>
            <EditText
                android:id="@+id/AlturaE"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="numberDecimal"
                >
            </EditText>
        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:focusableInTouchMode="true"
            android:id="@+id/txtViewGeneroE"
            android:text="@string/txtGenero" >
        </TextView>

        <RadioGroup
            android:id="@+id/radioGeneroE"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"

            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/radioGenderFE"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/GeneroF" />

            <RadioButton
                android:id="@+id/radioGenderME"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/GeneroM" >
            </RadioButton>
        </RadioGroup>

        <TextView
            android:id="@+id/textViewMedicamentoE"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:focusableInTouchMode="true"
            android:text="@string/txtMedicamento" >
        </TextView>
        <Spinner
            android:id="@+id/spinnerMedicamentoE"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:entries="@array/medicamentos" >
        </Spinner>

        <TextView
            android:id="@+id/textusuario"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/txtUsuario" >
        </TextView>
        <EditText
            android:id="@+id/UsuarioE"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:inputType="text"
            android:maxLines="1" >
        </EditText>

        <TextView
            android:id="@+id/textpass"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/txtPass" >
        </TextView>
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/PasswordE"
            android:inputType="textPassword"
            android:layout_margin="5dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnAceptarE"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:background="@color/colorPrimaryDark"
                android:textColor="@android:color/white"
                android:text="Enviar" />

            <Button
                android:id="@+id/btnCancelarE"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:background="@color/colorPrimary"
                android:textColor="@android:color/white"
                android:text="Atrás" />


        </LinearLayout>



    </LinearLayout>
</ScrollView>